articulo html de loquesea.com

--- a/staticos/templates/articulo.html
+++ b/staticos/templates/articulo.html
@@ -2,7 +2,7 @@
                 				<div>
                                                     <hgroup>
                                                        
-                                                            <img class="imagprin" src="">
+                                                            <img class="imagprin" src="../staticos/images/{imagen}">
                                                             {titulo}<br>
                                                             {descripcion}<br>
                                                             {contacto}<br>
